Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-1970

[Graphviz] Adds option to render exceptions relationships

    XMLWordPrintableJSON

Details

    • Patch Available

    Description

      Adds an option exceptions to render throwing relationships of functions in the diagram as red arrows from functions to the exception structures (exception structs are rendered always).

      Usage:

          $ thrift --gen gv:exceptions tutorial.thrift
      

      Attachments

        Activity

          People

            rodrigosetti Rodrigo Setti
            rodrigosetti Rodrigo Setti
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: