THRIFT-1970 [Graphviz] Adds option to render exceptions relationships

Patch: Rodrigo Setti